# Variant definitions for dotfiles management

# Base variant with common configuration
filegroup(
    name = "base",
    srcs = [],
    visibility = ["//visibility:public"],
)

# Work laptop variant
filegroup(
    name = "work_laptop",
    srcs = select({
        "//selectors:macos": [
            ":base",
            # Add macOS-specific work configuration
        ],
        "//selectors:linux": [
            ":base",
            # Add Linux-specific work configuration
        ],
        "//selectors:windows": [
            ":base",
            # Add Windows-specific work configuration
        ],
        "//conditions:default": [":base"],
    }),
    visibility = ["//visibility:public"],
)

# Personal desktop variant
filegroup(
    name = "personal_desktop",
    srcs = select({
        "//selectors:macos": [
            ":base",
            # Add macOS-specific personal configuration
        ],
        "//selectors:linux": [
            ":base",
            # Add Linux-specific personal configuration
        ],
        "//selectors:windows": [
            ":base",
            # Add Windows-specific personal configuration
        ],
        "//conditions:default": [":base"],
    }),
    visibility = ["//visibility:public"],
)

# Work remote devbox variant
filegroup(
    name = "work_remote_devbox",
    srcs = select({
        "//selectors:linux": [
            ":base",
            # Add Linux-specific remote work configuration
        ],
        "//conditions:default": [":base"],
    }),
    visibility = ["//visibility:public"],
)

# Personal WSL environment variant
filegroup(
    name = "personal_wsl",
    srcs = select({
        "//selectors:wsl": [
            ":base",
            # Add WSL-specific configuration
        ],
        "//conditions:default": [":base"],
    }),
    visibility = ["//visibility:public"],
)

package(default_visibility = ["//visibility:public"])