# Variant definitions for dotfiles management

# Base variant with common configuration
filegroup(
    name = "base",
    srcs = [],
    visibility = ["//visibility:public"],
)

# Work laptop variant
filegroup(
    name = "work_laptop",
    srcs = select({
        "//selectors:macos_has_vscode": [
            ":base",
            "//tools/tmux:tmux_conf_combined_work",
            "//tools/vscode:vscode_platform_settings",
        ],
        "//selectors:linux_has_vscode": [
            ":base",
            "//tools/tmux:tmux_conf_combined_work",
            "//tools/vscode:vscode_platform_settings",
        ],
        "//selectors:windows_has_vscode": [
            ":base",
            "//tools/tmux:tmux_conf_combined_work",
            "//tools/vscode:vscode_platform_settings",
        ],
        "//selectors:macos": [
            ":base",
            "//tools/tmux:tmux_conf_combined_work",
        ],
        "//selectors:linux": [
            ":base",
            "//tools/tmux:tmux_conf_combined_work",
        ],
        "//selectors:windows": [
            ":base",
            "//tools/tmux:tmux_conf_combined_work",
        ],
        "//conditions:default": [":base"],
    }),
    visibility = ["//visibility:public"],
)

# Personal desktop variant
filegroup(
    name = "personal_desktop",
    srcs = select({
        "//selectors:macos_has_vscode": [
            ":base",
            "//tools/tmux:tmux_conf_combined_personal",
            "//tools/vscode:vscode_platform_settings",
        ],
        "//selectors:linux_has_vscode": [
            ":base",
            "//tools/tmux:tmux_conf_combined_personal",
            "//tools/vscode:vscode_platform_settings",
        ],
        "//selectors:windows_has_vscode": [
            ":base",
            "//tools/tmux:tmux_conf_combined_personal",
            "//tools/vscode:vscode_platform_settings",
        ],
        "//selectors:macos": [
            ":base",
            "//tools/tmux:tmux_conf_combined_personal",
        ],
        "//selectors:linux": [
            ":base",
            "//tools/tmux:tmux_conf_combined_personal",
        ],
        "//selectors:windows": [
            ":base",
            "//tools/tmux:tmux_conf_combined_personal",
        ],
        "//conditions:default": [":base"],
    }),
    visibility = ["//visibility:public"],
)

# Work remote devbox variant
filegroup(
    name = "work_remote_devbox",
    srcs = select({
        "//selectors:linux": [
            ":base",
            # Add Linux-specific remote work configuration
        ],
        "//conditions:default": [":base"],
    }),
    visibility = ["//visibility:public"],
)

# Personal WSL environment variant
filegroup(
    name = "personal_wsl",
    srcs = select({
        "//selectors:wsl": [
            ":base",
            # Add WSL-specific configuration
        ],
        "//conditions:default": [":base"],
    }),
    visibility = ["//visibility:public"],
)

package(default_visibility = ["//visibility:public"])