load("//modules/bat:bat_rules.bzl", "bat_config", "bat_config_generator")

package(default_visibility = ["//visibility:public"])

bat_config(
    name = "base_config",
    settings = {
        "theme": "Dracula",
        "style": "plain",
        "paging": "always",
        "italic_text": "always",
        "wrap": "auto",
    },
)

# Platform-specific configurations
bat_config(
    name = "linux_config",
    includes = [":base_config"],
    platform_settings = {},
)

bat_config(
    name = "macos_config",
    includes = [":base_config"],
    platform_settings = {},
)

bat_config(
    name = "windows_config",
    includes = [":base_config"],
    platform_settings = {},
)

# Personal variant configuration
bat_config(
    name = "personal_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Work variant configuration
bat_config(
    name = "work_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Generate base config for current platform
bat_config_generator(
    name = "batconfig",
    config = select({
        "@platforms//os:linux": ":linux_config",
        "@platforms//os:macos": ":macos_config",
        "@platforms//os:windows": ":windows_config",
        "//conditions:default": ":base_config",
    }),
)

# Generate variant-specific configs
bat_config_generator(
    name = "personal_batconfig",
    config = select({
        "@platforms//os:linux": ":personal_config",
        "@platforms//os:macos": ":personal_config",
        "@platforms//os:windows": ":personal_config",
        "//conditions:default": ":personal_config",
    }),
    variant = "personal",
)

bat_config_generator(
    name = "work_batconfig",
    config = select({
        "@platforms//os:linux": ":work_config",
        "@platforms//os:macos": ":work_config",
        "@platforms//os:windows": ":work_config",
        "//conditions:default": ":work_config",
    }),
    variant = "work",
)

filegroup(
    name = "all_configs",
    srcs = [
        ":batconfig",
        ":personal_batconfig",
        ":work_batconfig",
    ],
)

filegroup(
    name = "bat_all",
    srcs = [
        ":all_configs",
    ],
)