load("//modules/docker:docker_rules.bzl", "docker_config", "docker_config_generator")

package(default_visibility = ["//visibility:public"])

docker_config(
    name = "base_config",
    settings = {
        "features": "true",
        "experimental": "true",
        "buildkit": "true",
    },
)

# Platform-specific configurations
docker_config(
    name = "linux_config",
    includes = [":base_config"],
    platform_settings = {},
)

docker_config(
    name = "macos_config",
    includes = [":base_config"],
    platform_settings = {},
)

docker_config(
    name = "windows_config",
    includes = [":base_config"],
    platform_settings = {},
)

# Personal variant configuration
docker_config(
    name = "personal_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Work variant configuration
docker_config(
    name = "work_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Generate base config for current platform
docker_config_generator(
    name = "dockerconfig",
    config = select({
        "@platforms//os:linux": ":linux_config",
        "@platforms//os:macos": ":macos_config",
        "@platforms//os:windows": ":windows_config",
        "//conditions:default": ":base_config",
    }),
)

# Generate variant-specific configs
docker_config_generator(
    name = "personal_dockerconfig",
    config = select({
        "@platforms//os:linux": ":linux_config",
        "@platforms//os:macos": ":macos_config",
        "@platforms//os:windows": ":windows_config",
        "//conditions:default": ":base_config",
    }),
    variant = "personal",
)

docker_config_generator(
    name = "work_dockerconfig",
    config = select({
        "@platforms//os:linux": ":linux_config",
        "@platforms//os:macos": ":macos_config",
        "@platforms//os:windows": ":windows_config",
        "//conditions:default": ":base_config",
    }),
    variant = "work",
)

filegroup(
    name = "all_configs",
    srcs = [
        ":dockerconfig",
        ":personal_dockerconfig",
        ":work_dockerconfig",
    ],
)

filegroup(
    name = "docker_all",
    srcs = [
        ":all_configs",
    ],
)