load("//modules/fzf:fzf_rules.bzl", "fzf_config", "fzf_config_generator")

package(default_visibility = ["//visibility:public"])

fzf_config(
    name = "base_config",
    settings = {
        "height": "40%",
        "layout": "reverse",
        "border": "rounded",
        "preview": "true",
        "preview_window": "right:50%:wrap",
    },
)

# Platform-specific configurations
fzf_config(
    name = "linux_config",
    includes = [":base_config"],
    platform_settings = {},
)

fzf_config(
    name = "macos_config",
    includes = [":base_config"],
    platform_settings = {},
)

fzf_config(
    name = "windows_config",
    includes = [":base_config"],
    platform_settings = {},
)

# Personal variant configuration
fzf_config(
    name = "personal_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Work variant configuration
fzf_config(
    name = "work_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Generate base config for current platform
fzf_config_generator(
    name = "fzfconfig",
    config = select({
        "@platforms//os:linux": ":linux_config",
        "@platforms//os:macos": ":macos_config",
        "@platforms//os:windows": ":windows_config",
        "//conditions:default": ":base_config",
    }),
)

# Generate variant-specific configs
fzf_config_generator(
    name = "personal_fzfconfig",
    config = select({
        "@platforms//os:linux": ":personal_config",
        "@platforms//os:macos": ":personal_config",
        "@platforms//os:windows": ":personal_config",
        "//conditions:default": ":personal_config",
    }),
    variant = "personal",
)

fzf_config_generator(
    name = "work_fzfconfig",
    config = select({
        "@platforms//os:linux": ":work_config",
        "@platforms//os:macos": ":work_config",
        "@platforms//os:windows": ":work_config",
        "//conditions:default": ":work_config",
    }),
    variant = "work",
)

filegroup(
    name = "all_configs",
    srcs = [
        ":fzfconfig",
        ":personal_fzfconfig",
        ":work_fzfconfig",
    ],
)

filegroup(
    name = "fzf_all",
    srcs = [
        ":all_configs",
    ],
)