package(default_visibility = ["//visibility:public"])

# Simple gitconfig generation
genrule(
    name = "gitconfig_base",
    outs = ["gitconfig_base.gitconfig"],
    cmd = """
echo "# Generated basic .gitconfig file" > $@
echo "" >> $@
echo "[core]" >> $@
echo "    editor = vim" >> $@
echo "    autocrlf = input" >> $@
echo "    pager = less -FRX" >> $@
echo "" >> $@
echo "[init]" >> $@
echo "    defaultBranch = main" >> $@
echo "" >> $@
echo "[pull]" >> $@
echo "    rebase = true" >> $@
echo "" >> $@
echo "[push]" >> $@
echo "    default = simple" >> $@
echo "" >> $@
echo "[diff]" >> $@
echo "    algorithm = patience" >> $@
echo "" >> $@
echo "[merge]" >> $@
echo "    ff = only" >> $@
echo "" >> $@
echo "[color]" >> $@
echo "    ui = auto" >> $@
echo "" >> $@
echo "[alias]" >> $@
echo "    st = status" >> $@
echo "    co = checkout" >> $@
echo "    ci = commit" >> $@
echo "    br = branch" >> $@
echo "    unstage = reset HEAD --" >> $@
echo "    last = log -1 HEAD" >> $@
echo "    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative" >> $@
echo "    amend = commit --amend" >> $@
echo "    wip = !git add -A && git commit -m 'WIP'" >> $@
echo "    unwip = !git log -1 --pretty=%B | grep -q '^WIP$$' && git reset HEAD~ || echo 'Not a WIP commit'" >> $@
echo "    cleanup = !git branch --merged | grep -v '\\\\*' | xargs -n 1 git branch -d" >> $@
echo "" >> $@
echo "[include]" >> $@
echo "    path = ~/.gitconfig.local" >> $@
echo "" >> $@
echo "# Generated at $$(date)" >> $@
""",
)

# Platform-specific configs
genrule(
    name = "gitconfig_macos",
    srcs = [":gitconfig_base"],
    outs = ["gitconfig_macos.gitconfig"],
    cmd = """
cat $(location :gitconfig_base) > $@
echo "" >> $@
echo "# macOS-specific settings" >> $@
echo "[credential]" >> $@
echo "    helper = osxkeychain" >> $@
echo "" >> $@
""",
)

genrule(
    name = "gitconfig_linux",
    srcs = [":gitconfig_base"],
    outs = ["gitconfig_linux.gitconfig"],
    cmd = """
cat $(location :gitconfig_base) > $@
echo "" >> $@
echo "# Linux-specific settings" >> $@
echo "[credential]" >> $@
echo "    helper = cache --timeout=3600" >> $@
echo "" >> $@
""",
)

genrule(
    name = "gitconfig_windows",
    srcs = [":gitconfig_base"],
    outs = ["gitconfig_windows.gitconfig"],
    cmd = """
cat $(location :gitconfig_base) > $@
echo "" >> $@
echo "# Windows-specific settings" >> $@
echo "[core]" >> $@
echo "    autocrlf = true" >> $@
echo "[credential]" >> $@
echo "    helper = wincred" >> $@
echo "" >> $@
""",
)

# Create a platform-specific version using select()
alias(
    name = "gitconfig",
    actual = select({
        "//selectors:macos": ":gitconfig_macos",
        "//selectors:linux": ":gitconfig_linux", 
        "//selectors:windows": ":gitconfig_windows",
        "//conditions:default": ":gitconfig_base",
    }),
)

# Export the global gitignore file
exports_files(["gitignore_global"])