load("//tools:defs.bzl", "template_file")
load(":jq_rules.bzl", "jq_module")

package(default_visibility = ["//visibility:public"])

# Simple README for jq configuration
template_file(
    name = "readme",
    src = "README.adoc.tpl",
    out = "README.adoc",
    substitutions = {
        "%%VERSION%%": "1.0.0",
    },
)

# Basic jq module template
jq_module(
    name = "base_template",
    content = """
# Template for base jq module
def identity: .;
def keys_sorted: keys | sort;
def has_key(k): k as $k | has($k);
""",
)

# Print path to jq modules
genrule(
    name = "print_path",
    srcs = ["//tools/jq:jq_modules"],
    outs = ["jq_path.txt"],
    cmd = "CWD=$$(pwd) && " +
          "echo 'To use jq modules, add the following paths to your jq search path:' > $@ && " +
          "echo '' >> $@ && " +
          "echo '  -L ~/.jq' >> $@ && " +
          "echo '  -L $$CWD/tools/jq/modules' >> $@ && " +
          "echo '' >> $@ && " +
          "echo 'For example:' >> $@ && " +
          "echo 'jq -L ~/.jq -n \"import \\\"base\\\" as b; [1,2,3] | b::avg\"' >> $@",
)