load("//modules/nvm:nvm_rules.bzl", "nvm_config", "nvm_config_generator")

package(default_visibility = ["//visibility:public"])

nvm_config(
    name = "base_config",
    settings = {
        "default_version": "lts/*",
        "auto_use": "true",
    },
)

# Platform-specific configurations
nvm_config(
    name = "linux_config",
    includes = [":base_config"],
    platform_settings = {},
)

nvm_config(
    name = "macos_config",
    includes = [":base_config"],
    platform_settings = {},
)

nvm_config(
    name = "windows_config",
    includes = [":base_config"],
    platform_settings = {},
)

# Personal variant configuration
nvm_config(
    name = "personal_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Work variant configuration
nvm_config(
    name = "work_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Generate base config for current platform
nvm_config_generator(
    name = "nvmconfig",
    config = select({
        "@platforms//os:linux": ":linux_config",
        "@platforms//os:macos": ":macos_config",
        "@platforms//os:windows": ":windows_config",
        "//conditions:default": ":base_config",
    }),
)

# Generate variant-specific configs
nvm_config_generator(
    name = "personal_nvmconfig",
    config = select({
        "@platforms//os:linux": ":personal_config",
        "@platforms//os:macos": ":personal_config", 
        "@platforms//os:windows": ":personal_config",
        "//conditions:default": ":personal_config",
    }),
    variant = "personal",
)

nvm_config_generator(
    name = "work_nvmconfig",
    config = select({
        "@platforms//os:linux": ":work_config",
        "@platforms//os:macos": ":work_config",
        "@platforms//os:windows": ":work_config",
        "//conditions:default": ":work_config",
    }),
    variant = "work",
)

filegroup(
    name = "all_configs",
    srcs = [
        ":nvmconfig",
        ":personal_nvmconfig",
        ":work_nvmconfig",
    ],
)

filegroup(
    name = "nvm_all",
    srcs = [
        ":all_configs",
    ],
)