load("//modules/pyenv:pyenv_rules.bzl", "pyenv_config", "pyenv_config_generator")

package(default_visibility = ["//visibility:public"])

pyenv_config(
    name = "base_config",
    settings = {
        "auto_activate_base": "false",
        "python_version": "3.9.0",
    },
)

# Platform-specific configurations
pyenv_config(
    name = "linux_config",
    includes = [":base_config"],
    platform_settings = {},
)

pyenv_config(
    name = "macos_config",
    includes = [":base_config"],
    platform_settings = {},
)

pyenv_config(
    name = "windows_config",
    includes = [":base_config"],
    platform_settings = {},
)

# Personal variant configuration
pyenv_config(
    name = "personal_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Work variant configuration
pyenv_config(
    name = "work_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Generate base config for current platform
pyenv_config_generator(
    name = "pyenvconfig",
    config = select({
        "@platforms//os:linux": ":linux_config",
        "@platforms//os:macos": ":macos_config",
        "@platforms//os:windows": ":windows_config",
        "//conditions:default": ":base_config",
    }),
)

# Generate variant-specific configs
pyenv_config_generator(
    name = "personal_pyenvconfig",
    config = select({
        "@platforms//os:linux": ":personal_config",
        "@platforms//os:macos": ":personal_config",
        "@platforms//os:windows": ":personal_config",
        "//conditions:default": ":personal_config",
    }),
    variant = "personal",
)

pyenv_config_generator(
    name = "work_pyenvconfig",
    config = select({
        "@platforms//os:linux": ":work_config",
        "@platforms//os:macos": ":work_config",
        "@platforms//os:windows": ":work_config",
        "//conditions:default": ":work_config",
    }),
    variant = "work",
)

filegroup(
    name = "all_configs",
    srcs = [
        ":pyenvconfig",
        ":personal_pyenvconfig",
        ":work_pyenvconfig",
    ],
)

filegroup(
    name = "pyenv_all",
    srcs = [
        ":all_configs",
    ],
)