load("//modules/rectangle:rectangle_rules.bzl", "rectangle_config", "rectangle_config_generator")

package(default_visibility = ["//visibility:public"])

rectangle_config(
    name = "base_config",
    settings = {
        "SUHalfSnap": "1",
        "SUEnableAlternateDefaultShortcuts": "0",
        "launchOnLogin": "1",
        "hideMenubarIcon": "0",
        "allowAnyShortcut": "1",
        "alternateDefaultShortcuts": "0",
        "screenEdgeGapTop": "0",
        "screenEdgeGapBottom": "0",
        "screenEdgeGapLeft": "0",
        "screenEdgeGapRight": "0",
    },
)

# Platform-specific configurations (macOS only for Rectangle)
rectangle_config(
    name = "macos_config",
    includes = [":base_config"],
    platform_settings = {},
)

# Personal variant configuration
rectangle_config(
    name = "personal_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Work variant configuration
rectangle_config(
    name = "work_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Generate base config
rectangle_config_generator(
    name = "rectangleconfig",
    config = select({
        "@platforms//os:macos": ":macos_config",
        "//conditions:default": ":base_config",
    }),
)

# Generate variant-specific configs
rectangle_config_generator(
    name = "personal_rectangleconfig",
    config = select({
        "@platforms//os:macos": ":personal_config",
        "//conditions:default": ":personal_config",
    }),
    variant = "personal",
)

rectangle_config_generator(
    name = "work_rectangleconfig",
    config = select({
        "@platforms//os:macos": ":work_config",
        "//conditions:default": ":work_config",
    }),
    variant = "work",
)

filegroup(
    name = "all_configs",
    srcs = [
        ":rectangleconfig",
        ":personal_rectangleconfig",
        ":work_rectangleconfig",
    ],
)

filegroup(
    name = "rectangle_all",
    srcs = [
        ":all_configs",
    ],
)