load("//modules/ripgrep:ripgrep_rules.bzl", "ripgrep_config", "ripgrep_config_generator")

package(default_visibility = ["//visibility:public"])

ripgrep_config(
    name = "base_config",
    settings = {
        "--smart-case": "",
        "--colors=match:fg:green": "",
        "--colors=match:style:bold": "",
        "--colors=line:fg:yellow": "",
        "--colors=path:fg:blue": "",
        "--max-columns": "150",
        "--max-columns-preview": "",
    },
)

# Platform-specific configurations
ripgrep_config(
    name = "linux_config",
    includes = [":base_config"],
    platform_settings = {},
)

ripgrep_config(
    name = "macos_config",
    includes = [":base_config"],
    platform_settings = {},
)

ripgrep_config(
    name = "windows_config",
    includes = [":base_config"],
    platform_settings = {},
)

# Personal variant configuration
ripgrep_config(
    name = "personal_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Work variant configuration
ripgrep_config(
    name = "work_config",
    includes = [":base_config"],
    variant_settings = {},
)

# Generate base config for current platform
ripgrep_config_generator(
    name = "ripgrepconfig",
    config = select({
        "@platforms//os:linux": ":linux_config",
        "@platforms//os:macos": ":macos_config",
        "@platforms//os:windows": ":windows_config",
        "//conditions:default": ":base_config",
    }),
)

# Generate variant-specific configs
ripgrep_config_generator(
    name = "personal_ripgrepconfig",
    config = select({
        "@platforms//os:linux": ":personal_config",
        "@platforms//os:macos": ":personal_config",
        "@platforms//os:windows": ":personal_config",
        "//conditions:default": ":personal_config",
    }),
    variant = "personal",
)

ripgrep_config_generator(
    name = "work_ripgrepconfig",
    config = select({
        "@platforms//os:linux": ":work_config",
        "@platforms//os:macos": ":work_config",
        "@platforms//os:windows": ":work_config",
        "//conditions:default": ":work_config",
    }),
    variant = "work",
)

filegroup(
    name = "all_configs",
    srcs = [
        ":ripgrepconfig",
        ":personal_ripgrepconfig",
        ":work_ripgrepconfig",
    ],
)

filegroup(
    name = "ripgrep_all",
    srcs = [
        ":all_configs",
    ],
)