load("//tools:defs.bzl", "template_file")

package(default_visibility = ["//visibility:public"])

# Use the new generated tmux.conf directly instead of individual components
filegroup(
    name = "tmux_components",
    srcs = [
        "//tools/tmux:tmux_conf_generated",
    ],
)

# Base tmux configuration
template_file(
    name = "tmux_conf",
    src = "tmux.conf.template",
    out = "tmux.conf",
)

# Default tmux configuration
filegroup(
    name = "tmux",
    srcs = [
        ":tmux_conf",
        ":tmux_components",
    ],
)

# Work variant tmux configuration
template_file(
    name = "work_tmux_conf",
    src = "tmux.conf.template",
    out = "work_tmux.conf",
    substitutions = {
        "%%VARIANT%%": "work",
    },
)

filegroup(
    name = "work_tmux",
    srcs = [
        ":work_tmux_conf",
        ":tmux_components",
    ],
)

# Personal variant tmux configuration
template_file(
    name = "personal_tmux_conf",
    src = "tmux.conf.template",
    out = "personal_tmux.conf",
    substitutions = {
        "%%VARIANT%%": "personal",
    },
)

filegroup(
    name = "personal_tmux",
    srcs = [
        ":personal_tmux_conf",
        ":tmux_components",
    ],
)

# Combined tmux configuration with platform selectors
filegroup(
    name = "combined_tmux",
    srcs = [
        "//tools/tmux:tmux_conf_combined",
    ],
    tags = ["tmux", "no-windows"],  # Add tags to skip on Windows
)

# Unified tmux configuration with platform and version variants
filegroup(
    name = "unified_tmux",
    srcs = [
        "//tools/tmux:tmux_conf_unified",
    ],
)

# Print path to the generated tmux.conf file
genrule(
    name = "print_path",
    srcs = [":tmux_conf"],
    outs = ["tmux_path.txt"],
    cmd = "echo 'To use this tmux configuration, run:' > $@ && " +
          "echo '' >> $@ && " +
          "echo 'bazel run //tools/tmux:tmux_conf_dotfile' >> $@ && " +
          "echo '' >> $@ && " +
          "echo 'This will create a ~/.tmux.conf file that sources the generated configuration.' >> $@ && " +
          "echo 'Any local customizations can be added to ~/.tmux.conf after the source line.' >> $@",
)

# Print path to the combined tmux configuration
genrule(
    name = "print_combined_path",
    srcs = ["//tools/tmux:tmux_conf_combined"],
    outs = ["tmux_combined_path.txt"],
    cmd = "echo 'To use the combined tmux configuration, run:' > $@ && " +
          "echo '' >> $@ && " +
          "echo 'bazel run //tools/tmux:tmux_conf_combined_dotfile' >> $@ && " +
          "echo '' >> $@ && " +
          "echo 'This will create a ~/.tmux.conf.combined file that sources the generated configuration.' >> $@ && " +
          "echo 'Any local customizations can be added to ~/.tmux.conf.combined after the source line.' >> $@",
)

# Print path to the unified tmux configuration
genrule(
    name = "print_unified_path",
    srcs = ["//tools/tmux:tmux_conf_unified"],
    outs = ["tmux_unified_path.txt"],
    cmd = "echo 'To use the unified tmux configuration, run:' > $@ && " +
          "echo '' >> $@ && " +
          "echo 'bazel run //tools/tmux:tmux_conf_unified_dotfile' >> $@ && " +
          "echo '' >> $@ && " +
          "echo 'This will create a ~/.tmux.conf.unified file that sources the generated configuration.' >> $@ && " +
          "echo 'Any local customizations can be added to ~/.tmux.conf.unified after the source line.' >> $@",
)